fix scrollbar OK

--- a/pomodoro_frontend/src/styles/style.scss
+++ b/pomodoro_frontend/src/styles/style.scss
@@ -283,6 +283,7 @@ div.list {
 	align-items: center;
 	margin: auto;
 	overflow: scroll;
+	overflow-x: hidden;
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 
